--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- CSS SECTION-->
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css">
-    <link rel="stylesheet" href="./Content/app.css">
+    <link rel="stylesheet" href="./Contents/app.css">
     <title>WEBD6201 - Lesson 5</title>
 </head>
 <body>
@@ -20,11 +20,11 @@
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-            <li id="home" class="nav-item active"><a class="nav-link" href="#"><i class="fas fa-igloo"></i> Home</a></li>
-            <li id="products" class="nav-item"><a class="nav-link" href="#"><i class="fas fa-map"></i> Products</a></li>
-            <li id="services" class="nav-item"><a class="nav-link" href="#"><i class="fas fa-concierge-bell"></i> Services</a></li>
-            <li id="about" class="nav-item"><a class="nav-link" href="#"><i class="fas fa-info-circle"></i> About Us</a></li>
-            <li id="contact" class="nav-item"><a class="nav-link" href="#"><i class="fas fa-mobile-alt"></i> Contact Us</a></li>
+            <li id="home" class="nav-item active"><a class="nav-link" href="index.html"><i class="fas fa-igloo"></i> Home</a></li>
+            <li id="products" class="nav-item"><a class="nav-link" href="products.html"><i class="fas fa-map"></i> Products</a></li>
+            <li id="services" class="nav-item"><a class="nav-link" href="services.html"><i class="fas fa-concierge-bell"></i> Services</a></li>
+            <li id="about" class="nav-item"><a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About Us</a></li>
+            <li id="contact" class="nav-item"><a class="nav-link" href="contact.html"><i class="fas fa-mobile-alt"></i> Contact Us</a></li>
         </div>
       </nav>
 
