Added footer and button on inde file

--- a/index.html
+++ b/index.html
@@ -33,11 +33,18 @@
           <div class="row">
               <div class="col">
                     <div class="jumbotron" id="contentArea">
-                        <h1 class="display-4">Hello, world!</h1>
+                        <h1 class="display-4">Welcome to my Site!</h1>
+
+                        <button type="button" class="btn btn-primary" id="projectxButton">Current Project</button>
                     </div>
               </div>
           </div>
       </main>
+      <footer>
+        <nav class="navbar fixed-bottom navbar-light bg-light">
+            <h4 class="display-6">&copy; CopyRight 2020.</h4>
+          </nav>
+      </footer>
 
     <!-- SCRIPT SECTION -->
     <!-- 3rd Party Libraries -->
