Updaeted all pages

--- a/services.html
+++ b/services.html
@@ -33,9 +33,9 @@
           <div class="row">
               <div class="col">
                     <div class="jumbotron" id="contentArea">
-                        <h1 class="display-4">Welcome to my Site!</h1>
+                        <h1 class="display-4">Interesting lists of my Services!</h1>
 
-                        <button type="button" class="btn btn-primary" id="projectxButton">Current Project</button>
+                       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut reprehenderit voluptatibus architecto nesciunt distinctio dignissimos vitae accusamus totam laborum officia tempore, quas in asperiores ipsum sequi ratione quasi perspiciatis eius.</p>
                     </div>
               </div>
           </div>
