--- a/about.html
+++ b/about.html
@@ -33,9 +33,9 @@
           <div class="row">
               <div class="col">
                     <div class="jumbotron" id="contentArea">
-                        <h1 class="display-4">Welcome to my Site!</h1>
+                        <h1 class="display-4">Interseting stuff about me...</h1>
 
-                        <button type="button" class="btn btn-primary" id="projectxButton">Current Project</button>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate ab maiores quaerat voluptas numquam. Corporis quod, quibusdam fuga nemo laudantium cupiditate nam numquam. Voluptates cum et unde, ea animi tenetur.</p>
                     </div>
               </div>
           </div>
