--- a/contact.html
+++ b/contact.html
@@ -33,9 +33,24 @@
           <div class="row">
               <div class="col">
                     <div class="jumbotron" id="contentArea">
-                        <h1 class="display-4">Welcome to my Site!</h1>
+                        <h1 class="display-4">Contact Me.</h1>
 
-                        <button type="button" class="btn btn-primary" id="projectxButton">Current Project</button>
+                        <form>
+                          <div class="form-group">
+                            <label for="exampleInputEmail1">Email address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                          </div>
+                          <div class="form-group">
+                            <label for="exampleInputPassword1">Password</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                          </div>
+                          <div class="form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                          </div>
+                          <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
                     </div>
               </div>
           </div>
