--- a/products.html
+++ b/products.html
@@ -33,9 +33,38 @@
           <div class="row">
               <div class="col">
                     <div class="jumbotron" id="contentArea">
-                        <h1 class="display-4">Welcome to my Site!</h1>
-
-                        <button type="button" class="btn btn-primary" id="projectxButton">Current Project</button>
+                        <h1 class="display-4">A list of interesting products</h1>
+                        <table class="table">
+                          <thead>
+                            <tr>
+                              <th scope="col">#</th>
+                              <th scope="col">First</th>
+                              <th scope="col">Last</th>
+                              <th scope="col">Handle</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr>
+                              <th scope="row">1</th>
+                              <td>Mark</td>
+                              <td>Otto</td>
+                              <td>@mdo</td>
+                            </tr>
+                            <tr>
+                              <th scope="row">2</th>
+                              <td>Jacob</td>
+                              <td>Thornton</td>
+                              <td>@fat</td>
+                            </tr>
+                            <tr>
+                              <th scope="row">3</th>
+                              <td>Larry</td>
+                              <td>the Bird</td>
+                              <td>@twitter</td>
+                            </tr>
+                          </tbody>
+                        </table>
+                        
                     </div>
               </div>
           </div>
